# stopwatch-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  stopwatch.tcss
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/stopwatch_tutorial/: __init__.py  __main__.py  cli.py  core.py
src/stopwatch_tutorial/ui/: __init__.py  app.py  stopwatch.py  stopwatch.tcss
tests/: conftest.py  test_main_entrypoint.py  test_stopwatch_app.py  test_timer_core.py
