[project]
name = "stopwatch-tutorial"
version = "0.1.0"
description = "A Textual stopwatch app with keyboard-first controls."
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.2.4",
]

[project.scripts]
stopwatch-tutorial = "stopwatch_tutorial.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
    "textual-dev>=1.8.0",
    "ty>=0.0.32",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=stopwatch_tutorial --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["stopwatch_tutorial"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
